crates/ts/tests/snapshots/baseline_manifest__baseline_identical_entry_points.snap
---
source: crates/ts/tests/baseline_manifest.rs
expression: "manifest_diff(json!({ \"main\": \"./index.js\", \"types\": \"./index.d.ts\" }),\njson!({ \"main\": \"./index.js\", \"types\": \"./index.d.ts\" }),)"
---
[]
