crates/ts/tests/snapshots/baseline_manifest__baseline_same_module_system.snap
---
source: crates/ts/tests/baseline_manifest.rs
expression: "manifest_diff(json!({ \"type\": \"module\" }), json!({ \"type\": \"module\" }),)"
---
[]
